<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:columnCount="2"
    android:useDefaultMargins="true"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="3dp"
        android:hint="@string/placeholder_mass"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weightLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/gender"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintEnd_toStartOf="@+id/genderRadioGroup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageLabel" />

    <Button
        android:id="@+id/recipeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:text="@string/eg_recipes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caloriesTextView" />

    <TextView
        android:id="@+id/activityLevelText"
        android:layout_width="257dp"
        android:layout_height="47dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBottom_toTopOf="@+id/activitySeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageEditText"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="192dp"
        android:layout_height="39dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageEditText">

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_man" />

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_woman" />
    </RadioGroup>

    <TextView
        android:id="@+id/ageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="26dp"
        android:text="@string/age"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBaseline_toBaselineOf="@+id/ageEditText"
        app:layout_constraintEnd_toStartOf="@+id/ageEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/caloriesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="7dp"
        android:text="@string/calories"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBaseline_toBaselineOf="@+id/caloriesTextView"
        app:layout_constraintEnd_toStartOf="@+id/caloriesTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/caloriesTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="3dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:minHeight="40dp"
        android:padding="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/caloriesLabel"
        app:layout_constraintTop_toBottomOf="@+id/ageEditText" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="58dp"
        android:layout_height="43dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="76dp"
        android:text="@string/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activityLevelLabel"
        android:layout_width="111dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activity"

        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintEnd_toStartOf="@+id/activityLevelText"
        app:layout_constraintTop_toBottomOf="@+id/genderLabel" />

    <SeekBar
        android:id="@+id/activitySeekBar"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="124dp"
        android:max="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageEditText" />

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="3dp"
        android:hint="@string/placeholder_height"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/heightLabel"
        app:layout_constraintTop_toBottomOf="@+id/weightEditText" />

    <TextView
        android:id="@+id/weightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="31dp"
        android:text="@string/mass"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightEditText"
        app:layout_constraintEnd_toStartOf="@+id/weightEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="3dp"
        android:hint="@string/placeholder_age"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ageLabel"
        app:layout_constraintTop_toBottomOf="@+id/heightEditText" />

    <TextView
        android:id="@+id/heightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="14dp"
        android:text="@string/height"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBaseline_toBaselineOf="@+id/heightEditText"
        app:layout_constraintEnd_toStartOf="@+id/heightEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/calorieCalcTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/calorie_calc_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>